# simforge

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/meca500/: meca.urdf
assets/meca500/meshes/: meca_500_r3_j1.dae  meca_500_r3_j2.dae  meca_500_r3_j3.dae  meca_500_r3_j4.dae  meca_500_r3_j5.dae  meca_500_r3_j6.dae
assets/tools/: simple_tool.urdf
assets/tx2_60/: tx2_60.urdf
assets/tx2_90xl/: tx2_90xl.urdf
assets/ur10e/: ur10e.urdf
assets/ur20/: ur20.urdf
assets/ur3e/: ur3e.urdf
assets/ur5e/: ur5e.urdf
env_configs/: all_robots.yaml  meca500_env.yaml  tx2_60_env.yaml  ur5e_env.yaml
simforge/: __init__.py  __main__.py  collision.py  collision_checker.py  commands.py  config.py  config_reader.py  control_gui.py  controller.py  genesis_renderer.py  genesis_wrapper.py  gui.py  ik_solver.py  logging_utils.py  main.py  movement_controller.py  path_planner.py  pybullet_wrapper.py  simulator.py  urdf_utils.py  utils.py
tests/: test_collision_checker.py  test_config_reader.py  test_control_gui.py  test_genesis_renderer.py  test_ik_solver.py  test_movement_controller.py  test_path_planner.py
